[gd_scene load_steps=5 format=3 uid="uid://e1conns6ymti"]

[ext_resource type="Script" uid="uid://cwkh4phcukfmo" path="res://Scripts/Login.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://b0ha0olj330mi" path="res://Assets/Visuals/Whisk_83ff20944a40c37b05c4dd15e3218260eg.png" id="2_1baen"]
[ext_resource type="Texture2D" uid="uid://ccpq2issi0r6n" path="res://Assets/Visuals/canyou.png" id="2_767d8"]
[ext_resource type="Texture2D" uid="uid://rfvxo3oyp3gy" path="res://Assets/Visuals/meaner.png" id="3_xklxs"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="loginbg" type="Sprite2D" parent="."]
position = Vector2(271, 474)
scale = Vector2(1.2701297, 1.4704099)
texture = ExtResource("2_1baen")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Your Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player Name"
alignment = 1

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RememberCheck" type="CheckBox" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Remember me"



[node name="CancelButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Cancel"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Canyou" type="Sprite2D" parent="."]
position = Vector2(275.98743, 637.418)
scale = Vector2(0.7924002, 0.50448066)
texture = ExtResource("2_767d8")

[node name="Meaner" type="Sprite2D" parent="."]
position = Vector2(272.97495, 269.875)
scale = Vector2(0.34696978, 0.34696975)
texture = ExtResource("3_xklxs")
